padding/spacing cleanup, code cleanup/fixes

--- a/css/main.css
+++ b/css/main.css
@@ -392,10 +392,10 @@ h4.title {
 }
 
 img.icon {
-    max-width:32px;
-    min-width:32px;
-    max-height:32px;
-    min-height:32px;
+    max-width:30px;
+    min-width:30px;
+    max-height:30px;
+    min-height:30px;
 }
 
 .padtop {
